src/test/ui/test-should-panic-attr.stderr
warning: attribute must be of the form: `#[should_panic]` or `#[should_panic(expected = "error message")]`
  --> $DIR/test-should-panic-attr.rs:4:1
   |
LL | #[should_panic = "foo"]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Errors in this attribute were erroneously allowed and will become a hard error in a future release.

warning: argument must be of the form: `expected = "error message"`
  --> $DIR/test-should-panic-attr.rs:12:1
   |
LL | #[should_panic(expected)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Errors in this attribute were erroneously allowed and will become a hard error in a future release.

warning: argument must be of the form: `expected = "error message"`
  --> $DIR/test-should-panic-attr.rs:19:1
   |
LL | #[should_panic(expect)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Errors in this attribute were erroneously allowed and will become a hard error in a future release.

warning: argument must be of the form: `expected = "error message"`
  --> $DIR/test-should-panic-attr.rs:26:1
   |
LL | #[should_panic(expected(foo, bar))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Errors in this attribute were erroneously allowed and will become a hard error in a future release.

warning: argument must be of the form: `expected = "error message"`
  --> $DIR/test-should-panic-attr.rs:33:1
   |
LL | #[should_panic(expected = "foo", bar)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Errors in this attribute were erroneously allowed and will become a hard error in a future release.

error: attribute must be of the form `#[should_panic]` or `#[should_panic(...)]`
  --> $DIR/test-should-panic-attr.rs:4:1
   |
LL | #[should_panic = "foo"]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

